--- a/notebooks/model_build.ipynb
+++ b/notebooks/model_build.ipynb
@@ -50,7 +50,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "ddb5b8c2-2964-48ec-a49e-11c5b6d1b243",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
